--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <br> 
     first bit of change for feature/testingbranch2. after this do a git add and git commit. but do not push it.
     <br>
+    second bit of change for the same brance feature/testingbranch2. after this do a git add and git commit and then this time push it.
+    <br>
 </body>
 </html>
